--- a/translations/en.json
+++ b/translations/en.json
@@ -29,8 +29,6 @@
   "cta.text": "With the impactMarket mobile app you can engage directly with all communities, learn about their progress, and empower them out of poverty.",
   "day": "Day",
   "donate": "Donate",
-  "donateModal.scanText": "Scan or copy/paste the address below into your wallet. Only send {{ currency }} to this address.",
-  "donateModal.text": "Your donation will be used as reserve and converted to cUSD overtime to fund communities in urgent need and running out of funds.",
   "downloadApp": "Download App",
   "eachClaimingPerDay": "each claiming {{ value }} per {{ frequency }}",
   "economicBeneficiariesActivity": "Economic beneficiaries' activity",
@@ -50,12 +48,13 @@
   "goal": "Goal",
   "inflowOutflow": "Inflow / Outflow",
   "invalidEmail": "The email is not valid",
-  "keyPartners": "Key partners",
   "learnMoreAboutUs": "Learn more about us",
   "lowOnFunds": "Low on funds",
   "managerSince": "Manager since",
   "many": "many",
   "memberOf": "Member of",
+  "modals.donate.scanText": "Scan or copy/paste the address below into your wallet. Only send {{ currency }} to this address.",
+  "modals.donate.text": "Your donation will be used as reserve and converted to cUSD overtime to fund communities in urgent need and running out of funds.",
   "monthlyActiveBackers": "{{ value }} monthly active backers on {{ date }}",
   "months": "Months",
   "newBeneficiaries": "New Beneficiaries",
@@ -66,12 +65,12 @@
   "numberBeneficiaries": "# Beneficiaries",
   "numberClaims": "# Claims",
   "numberTransfers": "# Transfers",
-  "page.communities.dashboard.distribution.heading": "Monthly Distribution",
-  "page.communities.dashboard.distribution.text": "Beneficiaries from different communities can claim $cUSD on a regular basis from their community contracts. UBI parameters take into consideration their beneficiaries' basic needs, and assessment by local social organizations and community leaders.",
-  "page.communities.dashboard.economic.heading": "Monthly Economic Development",
-  "page.communities.dashboard.economic.text": "Main indicators on beneficiaries' direct financial activity including volume transacted last month, number of transactions, and how many people they have reached/transacted with.",
-  "page.communities.dashboard.fundraising.heading": "Monthly Fundraising",
-  "page.communities.dashboard.fundraising.text": "Anyone can back those communities by sending $cUSD (Celo Dollar) directly to their contracts. This measures global monthly inflow, and its rate vs distribution.",
+  "page.community.dashboard.distribution.heading": "Monthly Distribution",
+  "page.community.dashboard.distribution.text": "Beneficiaries from different communities can claim $cUSD on a regular basis from their community contracts. UBI parameters take into consideration their beneficiaries' basic needs, and assessment by local social organizations and community leaders.",
+  "page.community.dashboard.economic.heading": "Monthly Economic Development",
+  "page.community.dashboard.economic.text": "Main indicators on beneficiaries' direct financial activity including volume transacted last month, number of transactions, and how many people they have reached/transacted with.",
+  "page.community.dashboard.fundraising.heading": "Monthly Fundraising",
+  "page.community.dashboard.fundraising.text": "Anyone can back those communities by sending $cUSD (Celo Dollar) directly to their contracts. This measures global monthly inflow, and its rate vs distribution.",
   "page.globalDashboard.communities.heading": "Helping {{ communitiesCount }} Communities",
   "page.globalDashboard.communities.ssi.heading": "Average Self-sustainability Index (SSI)",
   "page.globalDashboard.communities.ssi.text": "*SSI measures communities' collective financial self-sustainability, and average progress. It is inversely correlated with their beneficiaries UBI dependency/need and urgency.",
@@ -88,12 +87,13 @@
   "page.globalDashboard.fundraising.text": "Anyone can back those communities by sending $cUSD (Celo Dollar) directly to their contracts. This measures global monthly inflow, and its rate vs distribution.",
   "page.globalDashboard.global.heading": "Global dashboard",
   "page.globalDashboard.global.text": "Explore the main indicators of impactMarket system both on inflow of funds and distribution of basic income to beneficiaries through their UBI community contracts.",
-  "page.globalDashboard.healing.text": "Discover active communities and their beneficiaries’ activity on accessing/claiming a basic income that is empowering them out of poverty.",
   "page.globalDashboard.healingMap.heading": "Healing the world, ending poverty",
+  "page.globalDashboard.healingMap.text": "Discover active communities and their beneficiaries’ activity on accessing/claiming a basic income that is empowering them out of poverty.",
   "page.homepage.hero.heading": "Decentralized Poverty Alleviation Protocol.",
   "page.homepage.hero.text": "Key partners",
   "page.homepage.numbers.heading": "Full transparency. No intermediaries.",
   "page.homepage.numbers.text": "The power of blockchain unlocks new possibilities both for donors to understand their impact, and beneficiaries to access finance.",
+  "page.homepage.parnters.heading": "Key partners",
   "prev": "Prev",
   "raised": "Raised",
   "raisedFromDonors": "Raised from {{ donors }} Donors",
@@ -103,7 +103,7 @@
   "required": "A valid email is required",
   "requiredFields": "All the fields are required",
   "rowsPerPage": "Rows per page",
-  "runningOutOfFundsFirst": "Running out of funds first",
+  "s": "Running out of funds first",
   "seeMore": "See more",
   "seo.description": "impactMarket enables any vulnerable community to implement poverty alleviation mechanisms, like Unconditional Basic Income.",
   "seo.keywords": "impactMarket, community, unconditional, basic income, beneficiaries, cUSD, UBI, contracts, allowance, celo, blockchain, infrastructure, system, protocol",
