Update hero text copy

--- a/translations/en.json
+++ b/translations/en.json
@@ -90,10 +90,9 @@
   "page.globalDashboard.healingMap.heading": "Healing the world, ending poverty",
   "page.globalDashboard.healingMap.text": "Discover active communities and their beneficiaries’ activity on accessing/claiming a basic income that is empowering them out of poverty.",
   "page.homepage.hero.heading": "Decentralized Poverty Alleviation Protocol.",
-  "page.homepage.hero.text": "Key partners",
+  "page.homepage.hero.text": "impactMarket enables any vulnerable community to implement poverty alleviation mechanisms, like Unconditional Basic Income.",
   "page.homepage.numbers.heading": "Full transparency. No intermediaries.",
   "page.homepage.numbers.text": "The power of blockchain unlocks new possibilities both for donors to understand their impact, and beneficiaries to access finance.",
-  "page.homepage.parnters.heading": "Key partners",
   "prev": "Prev",
   "raised": "Raised",
   "raisedFromDonors": "Raised from {{ donors }} Donors",
