Add key partners string

--- a/translations/en.json
+++ b/translations/en.json
@@ -49,6 +49,7 @@
   "goal": "Goal",
   "inflowOutflow": "Inflow / Outflow",
   "invalidEmail": "The email is not valid",
+  "keyPartners": "Key partners",
   "learnMoreAboutUs": "Learn more about us",
   "lowOnFunds": "Low on funds",
   "managerSince": "Manager since",
