Add BR beneficiaries

--- a/translations/br.json
+++ b/translations/br.json
@@ -1,3 +1,4 @@
 {
-  "beneficiaries": "Beneficiários"
+  "beneficiaries": "Beneficiários",
+  "communityTitle": "{{ name }} - Comunidade ImpactMarket"
 }
