Add FR and PT-BR

--- a/translations/br.json
+++ b/translations/br.json
@@ -1,4 +1,137 @@
 {
+  "aboutUs": "Sobre nós",
+  "addressReachedOn": "{{ value }} endereços alcançados em {{ date }}",
+  "allCommunities": "Todas as comunidades",
+  "allowancePerBeneficiary": "Valor por Beneficiário",
+  "averageSsiWas": "{{ date }} autossustentabilidade média de {{ value }}",
+  "avgCumulativeDuration": "Duração média da RBI",
+  "avgCumulativeUbi": "Média cumulativa da RBI",
+  "avgUbiDuration": "Duração média da RBI",
+  "backers": "Doadores",
   "beneficiaries": "Beneficiários",
-  "communityTitle": "{{ name }} - Comunidade ImpactMarket"
+  "beneficiary": "Beneficiário",
+  "biggerFirst": "Maiores primeiro",
+  "bugReport": "Reportar erro",
+  "claimed": "Recebido",
+  "claimedAsUbi": "Recebido como RBI",
+  "claimedOn": "${{ value }} recebido em {{ date }}",
+  "claimsOn": "{{ value }} recebe em {{ date }}",
+  "communities": "Comunidades",
+  "communitiesPagination": "{{ first }}-{{ last }} de {{ total }} comunidades",
+  "communityDashboard": "Relatório da Comunidade",
+  "communityManagers": "Gestores da Comunidade",
+  "communityName": "Nome da Comunidade",
+  "communityTitle": "{{ name }} - Comunidade impactMarket",
+  "cookieConsentMessage": "Usamos nossos próprios cookies, bem como cookies de terceiros em nosso site para melhorar sua experiência, analisar nosso tráfego e para fins de segurança e marketing. Para obter mais informações, consulte nossa",
+  "cookiePolicy": "Política de Cookies",
+  "copyAddress": "Copiar endereço",
+  "countries": "Países",
+  "cta.heading": "Comece a ajudar agora.",
+  "cta.text": "Com o aplicativo impactMarket, você pode apoiar diretamente as comunidades, acompanhar seu progresso e ajudá-las a sair da pobreza.",
+  "day": "Dia",
+  "donate": "Doar",
+  "downloadApp": "Baixe o App",
+  "eachClaimingPerDay": "cada pedido {{ value }} por {{ frequency }}",
+  "economicBeneficiariesActivity": "Atividade econômica dos beneficiários",
+  "emailAddress": "Endereço de email",
+  "emailSubscribe.heading": "Receba atualizações sobre nosso progresso, novas funcionalidades e nossos indicadores na luta contra a pobreza.",
+  "enterYourEmail": "Insira seu email...",
+  "estimatedUbiDuration": "Duração estimada da RBI",
+  "faqs": "Faqs",
+  "featureRequests": "Solicitação de funcionalidades",
+  "featured": "Em destaque",
+  "firstName": "Primeiro nome",
+  "footer.note": "impactMarket é uma infraestrutura de crowdfinance aberta, gratuita, segura, sem fronteiras e transparente desenvolvida para combater a pobreza. Opera com base no protocolo Celo, usa cUSD (Celo Dollar) como principal moeda digital e funciona de forma autônoma por meio de contratos inteligentes.",
+  "fundingRate": "Taxa de financiamento",
+  "fundingRateOn": "{{ value }}% taxa de financiamento em {{ date }}",
+  "givingRatePerBacker": "Taxa de doação por doador",
+  "globalDashboard": "Dashboard Global",
+  "goal": "Objetivo",
+  "inflowOutflow": "Entrada/ Saída",
+  "invalidEmail": "O email é inválido",
+  "keyPartners": "Nossos Parceiros",
+  "learnMoreAboutUs": "Saiba mais sobre nós",
+  "lowOnFunds": "Poucos recursos",
+  "managerSince": "Gerente desde",
+  "many": "muitos",
+  "memberOf": "Membro de",
+  "modal.donate.scanText": "Escaneie ou copie e cole o endereço abaixo em sua carteira. Envie apenas {{ currency }} para esse endereço.",
+  "modal.donate.text": "Sua doação será usada como reserva e convertida em cUSD para financiar comunidades em necessidade urgente e sem fundos.",
+  "monthlyActiveBackers": "{{ value }} atividade mensal dos doadores em {{ date }}",
+  "months": "Meses",
+  "newBeneficiaries": "Novos Beneficiários",
+  "newBeneficiariesOn": "{{ value }} novos beneficiários em {{ date }}",
+  "newestFirst": "As mais novas primeiro",
+  "next": "Próximo",
+  "numberBackers": "# Doadores",
+  "numberBeneficiaries": "# Beneficiários",
+  "numberClaims": "# Pedidos",
+  "numberTransfers": "# Transferências",
+  "page.community.dashboard.distribution.heading": "Distribuição Mensal",
+  "page.community.dashboard.distribution.text": "Os beneficiários de diferentes comunidades podem pedir cUSD regularmente de seus contratos comunitários. A definição dos parâmetros de RBI considera as necessidades básicas de seus beneficiários e avaliação de organizações sociais locais e líderes comunitários.",
+  "page.community.dashboard.economic.heading": "Desenvolvimento Econômico Mensal",
+  "page.community.dashboard.economic.text": "Principais indicadores sobre a atividade financeira direta dos beneficiários, incluindo o volume transacionado no mês anterior, o número de transações e com quantas pessoas eles transacionaram.",
+  "page.community.dashboard.fundraising.heading": "Arrecadação de recursos mensal",
+  "page.community.dashboard.fundraising.text": "Qualquer pessoa pode apoiar as comunidades enviando cUSD (Celo Dollar) diretamente para seus contratos. Isso mede a entrada de fundos mensal e sua taxa vs sua distribuição.",
+  "page.community.dashboard.recentCommunityWarning": "This community was created less than 1 day ago and still doesn't have enough data to show charts. Please come back later.",
+  "page.globalDashboard.communities.heading": "Apoiando {{ communitiesCount }} Comunidades",
+  "page.globalDashboard.communities.ssi.heading": "Taxa Média de Autossustentabilidade (TAS)",
+  "page.globalDashboard.communities.ssi.text": "*A TAS mede a autossustentabilidade financeira coletiva das comunidades e seu progresso médio. É inversamente correlacionado com a dependência/ necessidade e urgência de seus beneficiários quanto à RBI.",
+  "page.globalDashboard.communities.text": "As comunidades com RBI são normalmente gerenciadas e promovidas por líderes comunitários e organizações sociais ou governamentais locais e internacionais, que definem os parâmetros RBI iniciais e adicionam/ removem os beneficiários que eles acreditam que mais necessitam.",
+  "page.globalDashboard.demographics.charts.ageRange.heading": "Faixa Etária",
+  "page.globalDashboard.demographics.charts.countries.heading": "País (Número de Beneficiários)",
+  "page.globalDashboard.demographics.heading": "Informações Demográficas",
+  "page.globalDashboard.demographics.tooltip": "Esses dados são baseados em uma amostra auto-relatada de {{ totalPercentage }}%",
+  "page.globalDashboard.distribution.heading": "Distribuição Mensal",
+  "page.globalDashboard.distribution.text": "Beneficiários de diferentes comunidades podem receber cUSD regularmente de seus contratos comunitários. Os parâmetros de RBI levam em consideração as necessidades básicas de seus beneficiários e a avaliação de organizações sociais locais e líderes comunitários.",
+  "page.globalDashboard.economic.heading": "Desenvolvimento Econômico Mensal",
+  "page.globalDashboard.economic.text": "Principais indicadores sobre a atividade financeira direta dos beneficiários, incluindo o volume transacionado no mês anterior, o número de transações e com quantas pessoas eles transacionaram.",
+  "page.globalDashboard.fundraising.heading": "Arrecadação de recursos mensal",
+  "page.globalDashboard.fundraising.text": "Qualquer pessoa pode apoiar as comunidades enviando cUSD (Celo Dollar) diretamente para seus contratos. Isso mede a entrada de fundos mensal e sua taxa vs sua distribuição.",
+  "page.globalDashboard.global.heading": "Dashboard Global",
+  "page.globalDashboard.global.text": "Explore os principais indicadores do sistema impactMarket quanto à arrecadação de recursos e à distribuição de renda básica aos beneficiários por meio de seus contratos comunitários de RBI.",
+  "page.globalDashboard.healingMap.heading": "Erradicando a pobreza extrema ao redor do mundo",
+  "page.globalDashboard.healingMap.text": "Descubra as comunidades ativas e a atividade de seus beneficiários para acessar uma renda básica que os ajuda a sair da condição de pobreza extrema.",
+  "page.homepage.hero.heading": "Protocolo Descentralizado de Redução da Pobreza.",
+  "page.homepage.hero.text": "impactMarket permite que qualquer comunidade vulnerável implemente mecanismos de redução da pobreza, como a Renda Básica Incondicional.",
+  "page.homepage.numbers.heading": "Total transparência. Sem intermediários.",
+  "page.homepage.numbers.text": "O poder do blockchain abre novas possibilidades tanto para os doadores entenderem seu impacto, quanto para os beneficiários acessarem o financiamento.",
+  "prev": "Prev",
+  "raised": "arrecadado",
+  "raisedFromDonors": "Arrecadado graças a {{ donors }} doadores",
+  "raisedOn": "${{ value }} arrecadado em {{ date }}",
+  "reach": "Alcance",
+  "recentlyAdded": "Adicionadas recentemente",
+  "required": "É necessário um email válido",
+  "requiredFields": "Todos os campos são obrigatórios",
+  "rowsPerPage": "Linhas por página",
+  "runningOutOfFundsFirst": "As primeiras a ficar sem recursos",
+  "seeMore": "Ver mais",
+  "seo.description": "Graças à tecnologia blockchain, a impactMarket permite que comunidades vulneráveis pelo mundo implementem mecanismos de redução da pobreza, como a Renda Básica Incondicional.",
+  "seo.keywords": "impactMarket, comunidades, impacto social, renda básica, ODS, beneficiários, cUSD, criptomoedas, distribuição de renda, celo, blockchain, renda básica emergencial, pobreza, doação",
+  "seo.title": "impactMarket - Protocolo descentralizado de redução da pobreza",
+  "somethingWrong": "Aconteceu algo errado. Tente novamente mais tarde...",
+  "spendingRate": "Taxa de gastos",
+  "ssi": "TAS",
+  "subscribe": "Inscreva-se",
+  "subscribeSuccess": "Obrigado por se inscrever!",
+  "subscribingNote": "A se inscrever, você receberá novidades sobre o nosso progresso, novas funcionalidades e nossos indicadores na luta contra a pobreza.",
+  "totalDistributed": "Total Distribuído",
+  "totalRaised": "Total Arrecadado",
+  "totalVolume": "Volume Total",
+  "transactedOn": "${{ value }} transacionado em {{ date }}",
+  "transactionsOn": "{{ value }} transações em {{ date }}",
+  "ubiContract": "Contrato RBI",
+  "ubiPulse": "Cadência da RBI",
+  "ubiRatePerBeneficiary": "Taxa de RBI por beneficiário",
+  "viewAll": "Ver todos",
+  "viewGlobalDashboard": "Veja o Dashboard Global",
+  "volume": "Volume",
+  "vsPrevious30Days": "vs últimos 30 dias",
+  "wallet.extendedLabel.btc": "Bitcoin",
+  "wallet.extendedLabel.celo": "cUSD (Celo Dollar) ou CELO",
+  "wallet.extendedLabel.eth": "ETH ou tokens ERC20",
+  "weAreHiring": "Estamos contratando!",
+  "wrongEmail": "Email incorreto",
+  "xOfCountries": "{{ first }} - {{ last }} de {{ total }} Países"
 }
