Add communities page search strings

--- a/translations/en.json
+++ b/translations/en.json
@@ -63,6 +63,7 @@
   "newBeneficiariesOn": "{{ value }} new beneficiaries on {{ date }}",
   "newestFirst": "Newest first",
   "next": "Next",
+  "noCommunitiesMatchCriteria": "There are no communities matching your criteria",
   "numberBackers": "# Backers",
   "numberBeneficiaries": "# Beneficiaries",
   "numberClaims": "# Claims",
@@ -106,6 +107,7 @@
   "requiredFields": "All the fields are required",
   "rowsPerPage": "Rows per page",
   "runningOutOfFundsFirst": "Running out of funds first",
+  "searchByCommunityName": "Search by community name",
   "seeMore": "See more",
   "seo.description": "impactMarket enables any vulnerable community to implement poverty alleviation mechanisms, like Unconditional Basic Income.",
   "seo.keywords": "impactMarket, community, unconditional, basic income, beneficiaries, cUSD, UBI, contracts, allowance, celo, blockchain, infrastructure, system, protocol",
